dowel/tests/ui/context_dup.stderr
error: duplicate leaf type in context: two non-skipped fields share this type, which would produce conflicting `Wire` impls. Annotate one field with `#[context(skip)]` and wire it by hand.
  --> tests/ui/context_dup.rs:15:14
   |
15 |     replica: Db,
   |              ^^
